fixed menu label alignment

--- a/DuoNat/styles/components/menu.css
+++ b/DuoNat/styles/components/menu.css
@@ -57,7 +57,7 @@
     border-radius: 15px;
     font-size: 14px;
     margin-right: 10px;
-    margin-top: -8px;
+/*    margin-top: -8px;*/
     opacity: 0;
     transition: opacity 0.3s ease;
     white-space: nowrap;
